Edit image source

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="10">
     <tr>
-      <td><img src="images/zp04186.jpg" alt="My Picture"></td>
+      <td><img src="zp04186.jpg" alt="My Picture"></td>
       <td>
         <h1>Muhammad Firdaus bin Abdullah</h1>
         <p><em>Geoscientist at <strong><a href="https://www.petronas.com/">PETRONAS Carigali Sdn Bhd</a></strong></em></p>
